------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Tue Nov  3 12:44 CET 1998   Simon Weijgers  <simon@mbit.doa.org>
	
	* Fixed a little parse error pointed out by Al Sutton
	  <al.sutton@chase.com>.

Thu Oct 22 17:46 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Some fixes to serial driver - now interrupts seem to work.

	* Final tweeks before 0.0.73.

Wed Oct 21 12:26 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* More register variable optimisation. Should now be complete.

	* Fixed some small bugs introduced in previous optimisation.

	* Discovered big bug in the minix truncate code - see BUGS.

Thu Oct 13 20:20 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Heavily optimised fs code adding new register varables in
	  carefully selected places.

	* Re-wrote block device code so it now only deals with single block
	  accesses, but much more cleanly

	* Fixed comment in kernel/sched.c

	* Removed alot of checking code from get_empty_inode() in
	  fs/inode.c. I don't think this should cause a problem. opinions?

Thu Oct 13 20:20 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added new BUGS entries.

Tue Oct 13 18:07 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Optimised code size with careful use of register variables

Tue Oct 13 12:09 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Removed the blocked signal element from task structure, and
	  associated code.

Sun Oct 11 13:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Corrected some signal behavoir, fixed return status behavoir.

Sat Oct 10 11:59 CET 1998   Simon Weijgers  <simon@mbit.doa.org>

	* After detection of executable format jump to
	  rest of the code instead of going on detecting other
	  formats.
