@@ -3,6 +3,8 @@ CONFIG_CONSOLE_BIOS=n
 CONFIG_DCON_VT52=y
 CONFIG_DCON_ANSI=y
 CONFIG_DCON_ANSI_PRINTK=n
+CONFIG_DEFAULT_KEYMAP=y
+CONFIG_BIOS_VT52=y
 CONFIG_XT=n
 CONFIG_MODULE=n
 CONFIG_COMPAQ_FAST=n
@@ -33,6 +35,8 @@ CONFIG_BLK_DEV_BFD=y
 
 CONFIG_BLK_DEV_RAM=n
 CONFIG_BLK_DEV_XD=n
+
+CONFIG_286PMODE=n
 
 CONFIG_STRACE=n
 CONFIG_OPT_SMALL=n
