@@ -14,13 +14,13 @@
 #define CONFIG_DCON_VT52 1
 #define CONFIG_DCON_ANSI 1
 #undef  CONFIG_DCON_ANSI_PRINTK
-#undef  CONFIG_CONSOLE_BIOS
 #undef  CONFIG_BE_KEYMAP
 #undef  CONFIG_FR_KEYMAP
 #undef  CONFIG_UK_KEYMAP
 #undef  CONFIG_ES_KEYMAP
 #undef  CONFIG_DE_KEYMAP
 #define CONFIG_DEFAULT_KEYMAP 1
+#undef  CONFIG_CONSOLE_BIOS
 #undef  CONFIG_XT
 #undef  CONFIG_MODULE
 #undef  CONFIG_COMPAQ_FAST
